# advent-of-code-2017

./: .gitignore  CMakeLists.txt  LICENSE  README.md
advent/: CMakeLists.txt  main.cc
advent/cmake/: boost.cmake  fmt.cmake  gtest.cmake
advent/days/: CMakeLists.txt
advent/days/01/: CMakeLists.txt  inverse_captcha.cc  inverse_captcha.hh
advent/days/02/: corruption_checksum.cc  corruption_checksum.hh
advent/days/03/: spiral_memory.cc  spiral_memory.hh
advent/days/04/: high_entropy_passphrases.cc  high_entropy_passphrases.hh
advent/days/05/: maze.cc  maze.hh
advent/days/06/: memory_reallocation.cc  memory_reallocation.hh
advent/days/07/: recursive_circus.cc  recursive_circus.hh
advent/days/08/: registers.cc  registers.hh
advent/days/09/: stream_processing.cc  stream_processing.hh
advent/days/10/: knot_hash.cc  knot_hash.hh
advent/days/11/: hex_ed.cc  hex_ed.hh
advent/days/12/: digital_plumber.cc  digital_plumber.hh
advent/days/13/: packet_scanners.cc  packet_scanners.hh
advent/days/14/: disk_defragmentation.cc  disk_defragmentation.hh
advent/days/15/: dueling_generators.cc  dueling_generators.hh
advent/days/16/: permutation_promenade.cc  permutation_promenade.hh
advent/days/17/: spinlock.cc  spinlock.hh
advent/days/18/: duet.cc  duet.hh
advent/days/19/: tubes.cc  tubes.hh
advent/days/20/: particle_swarm.cc  particle_swarm.hh
advent/days/21/: fractal_art.cc  fractal_art.hh
advent/utils/: CMakeLists.txt  arguments.hh  assert.hh  base.cc  base.hh  container.hh  misc.cc  misc.hh  solutions.cc  solutions.hh  tasks.hh  tests.hh  timer.hh  types.hh
tests/: CMakeLists.txt  day_01_tests.cc  day_02_tests.cc  day_03_tests.cc  day_04_tests.cc  day_05_tests.cc  day_06_tests.cc  day_07_tests.cc  day_08_tests.cc  day_09_tests.cc  day_10_tests.cc  day_11_tests.cc  day_12_tests.cc  day_13_tests.cc  day_14_tests.cc  day_15_tests.cc  day_16_tests.cc  day_17_tests.cc  day_18_tests.cc  day_19_tests.cc  day_20_tests.cc  day_21_tests.cc  main.cc  tests_base.hh
